in/02-services.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:crd
          args:
            - --global.debug
            - --api
            - --entrypoints=Name:web Address::80
            - --entrypoints=Name:footcp Address::8090
            - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 80
            - name: webs
              containerPort: 8090
            - name: admin
              containerPort: 8080
          type:

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      port: 8090
      name: webs
      targetPort: 8090
      nodePort: 30090
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
      nodePort: 30880
  type: NodePort

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: whoami
          image: whoami:local
          ports:
            - name: web
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: whoamitcp
  labels:
    app: whoamitcp

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoamitcp
  template:
    metadata:
      labels:
        app: whoamitcp
    spec:
      containers:
        - name: containouswhoamitcp
          image: whoamitcp:local
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: whoamitcp

spec:
  ports:
    - protocol: TCP
      name: footcp
      port: 8080
  selector:
    app: whoamitcp
