in/03-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entrypoints:
    - web
  routes:
  - match: PathPrefix(`/whoami`)
    kind: Rule
    priority: 12
    services:
    - name: whoami
      port: 80
